err/waybill.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/battalion'...
Compiling './lib/python3.5/site-packages/battalion/command.py'...
***   File "./lib/python3.5/site-packages/battalion/command.py", line 32
    print self.__autodoc__
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/battalion-0.5.6.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-15.0.dist-info'...
Listing './lib/python3.5/site-packages/pathlib-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyul'...
Listing './lib/python3.5/site-packages/pyul/coreUtils'...
Compiling './lib/python3.5/site-packages/pyul/coreUtils/classcontextmanager.py'...
***   File "./lib/python3.5/site-packages/pyul/coreUtils/classcontextmanager.py", line 30
    print "Do Something with", new_branch
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyul/coreUtils/dotifydict.py'...
***   File "./lib/python3.5/site-packages/pyul/coreUtils/dotifydict.py", line 22
    raise KeyError, 'cannot set "{0}" in "{1}" ({2})'.format(restOfKey, myKey, repr(target))
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyul/envUtils.py'...
***   File "./lib/python3.5/site-packages/pyul/envUtils.py", line 139
    print "Requirement {0} already satisfied with {1}".format(req, dist)
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyul/guiUtils'...
Listing './lib/python3.5/site-packages/pyul/guiUtils/qt'...
Compiling './lib/python3.5/site-packages/pyul/guiUtils/qt/__init__.py'...
***   File "./lib/python3.5/site-packages/pyul/guiUtils/qt/__init__.py", line 63
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyul/importUtils.py'...
***   File "./lib/python3.5/site-packages/pyul/importUtils.py", line 55
    print "Making new RollbackImporter Instance"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyul/support'...
Compiling './lib/python3.5/site-packages/pyul/support/path.py'...
***   File "./lib/python3.5/site-packages/pyul/support/path.py", line 412
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyul-0.4.5.dist-info'...
Listing './lib/python3.5/site-packages/pyversion-0.5.5.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.9.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/version'...
Compiling './lib/python3.5/site-packages/version/cli.py'...
***   File "./lib/python3.5/site-packages/version/cli.py", line 9
    print VersionUtils.increment(version)
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/waybill'...
Listing './lib/python3.5/site-packages/waybill-0.1.3.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
